--- a/Pertemuan-15/portofolio/src/App.css
+++ b/Pertemuan-15/portofolio/src/App.css
@@ -1,10 +1,18 @@
 .fade-enter {
-  opacity: 0;
+  opacity: 0.01;
   z-index: 1;
 }
-
 .fade-enter.fade-enter-active {
   opacity: 1;
-  transition: opacity 250ms ease;
-  /* transition: width 2s linear 1s; */
+  transition: opacity 250ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+div.transition-group {
+  position: relative;
 }
